# mc-auto-server-builder

./: .coverage  .gitignore  README.md  TODO.md  example_config.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/mc_auto_server_builder/: __init__.py  action_executor.py  action_preflight.py  ai.py  ai_prompts.py  attempt_runner.py  bisect_runtime.py  builder.py  cli.py  config.py  defaults.py  diagnostics.py  input_parser.py  install_runtime.py  java_runtime.py  mod_runtime.py  models.py  pack_runtime.py  recognition.py  recognition_runtime.py  reporting.py  resume_runtime.py  rule_db.py  runtime_startup.py  server_installers.py  util.py  workspace.py
tests/: test_builder.py  test_cli.py  test_config.py  test_diagnostics.py  test_input_parser.py  test_workspace.py
