[project]
name = "mc-auto-server-builder"
version = "0.1.0"
description = "Automated Minecraft modpack server builder"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
  "requests>=2.31.0",
  "psutil>=5.9.0",
  "rich>=13.0.0",
  "tqdm>=4.66.0",
]

[project.scripts]
mcasb = "mc_auto_server_builder.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.31.0",
  "build>=1.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=mc_auto_server_builder --cov-report=term-missing --cov-fail-under=15"

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
